[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "witness"
version = "0.2.0"
description = "Capture, perturb, and diff LLM agent decisions. Make agent behavior under stress legible."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Witness contributors" }]
keywords = ["llm", "agents", "observability", "evaluation", "tracing", "counterfactual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
rich = ["rich>=13.7"]
ui = ["streamlit>=1.30", "rich>=13.7", "pandas>=2.0"]
all = [
    "anthropic>=0.40",
    "openai>=1.40",
    "rich>=13.7",
    "streamlit>=1.30",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.10",
    "rich>=13.7",
]

[project.scripts]
witness = "witness.cli:main"

[project.urls]
Homepage = "https://github.com/witness-ai/witness"
Issues = "https://github.com/witness-ai/witness/issues"

[tool.hatch.build.targets.wheel]
packages = ["witness"]

[tool.hatch.build.targets.sdist]
include = ["/witness", "/tests", "/examples", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit real LLM APIs (set RUN_INTEGRATION=1)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
